--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -1,2 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-$font-family: 'Montserrat', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Dosis&family=Inter&display=swap');
+$F1: 'Dosis', sans-serif;
+$F2: 'Inter', sans-serif;
